style: update spotless java formatter configuration